# codex-led-widget

./: README.md  design-qa.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
audit/visual-review-2026-06-15/: audit-notes.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  desktop.rs  lib.rs  main.rs  quota.rs
src/components/: LiquidMeter.vue  QuotaPanel.vue  StatusBar.vue  TitleBar.vue
src/composables/: useLocale.ts  useQuota.ts  useWindowControls.ts
src/main/: main.js  quota-service.js
src/renderer/: renderer.js  styles.css
src/styles/: app.css
src/types/: quota.ts
